--- a/build.gradle
+++ b/build.gradle
@@ -164,6 +164,9 @@ dependencies {
 
         api 'javax.cache:cache-api:1.1.1'
 
+        api 'cglib:cglib-nodep:3.3.0'
+        api 'org.objenesis:objenesis:3.1'
+
         runtime 'org.hsqldb:hsqldb:2.4.1'
     }
 }
