--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     def dataVersion = baseVersion
     def dynattrVersion = baseVersion
     def emailVersion = baseVersion
+    def imapVersion = baseVersion
     def localfsVersion = baseVersion
     def restVersion = baseVersion
     def datatoolsVersion = baseVersion
@@ -108,6 +109,11 @@ dependencies {
         api "io.jmix.email:jmix-email-ui:${snapshotOr(emailVersion)}"
         api "io.jmix.email:jmix-email-starter:${snapshotOr(emailVersion)}"
         api "io.jmix.email:jmix-email-ui-starter:${snapshotOr(emailVersion)}"
+
+        api "io.jmix.imap:jmix-imap:${snapshotOr(imapVersion)}"
+        api "io.jmix.imap:jmix-imap-ui:${snapshotOr(imapVersion)}"
+        api "io.jmix.imap:jmix-imap-starter:${snapshotOr(imapVersion)}"
+        api "io.jmix.imap:jmix-imap-ui-starter:${snapshotOr(imapVersion)}"
 
         api "io.jmix.localfs:jmix-localfs:${snapshotOr(localfsVersion)}"
         api "io.jmix.localfs:jmix-localfs-starter:${snapshotOr(localfsVersion)}"
@@ -185,6 +191,8 @@ dependencies {
         api 'org.springframework.security.oauth:spring-security-oauth2:2.4.1.RELEASE'
 
         api 'javax.cache:cache-api:1.1.1'
+
+        api 'com.icegreen:greenmail:1.5.7'
 
         runtime 'org.hsqldb:hsqldb:2.4.1'
     }
