--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,9 @@ dependencies {
         api "io.jmix.data:jmix-data:${snapshotOr(dataVersion)}"
         api "io.jmix.data:jmix-data-starter:${snapshotOr(dataVersion)}"
 
+        api "io.jmix.data.hibernate:jmix-hibernate:${snapshotOr(dataVersion)}"
+        api "io.jmix.data.hibernate:jmix-hibernate-starter:${snapshotOr(dataVersion)}"
+
         api "io.jmix.dynattr:jmix-dynattr:${snapshotOr(dynattrVersion)}"
         api "io.jmix.dynattr:jmix-dynattr-ui:${snapshotOr(dynattrVersion)}"
         api "io.jmix.dynattr:jmix-dynattr-starter:${snapshotOr(dynattrVersion)}"
