--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     def dataVersion = baseVersion
     def dynattrVersion = baseVersion
     def emailVersion = baseVersion
+    def emailtemplatesVersion = baseVersion
     def grapesJsVersion = baseVersion
     def graphqlVersion = baseVersion
     def imapVersion = baseVersion
@@ -113,6 +114,11 @@ dependencies {
         api "io.jmix.email:jmix-email-ui:${snapshotOr(emailVersion)}"
         api "io.jmix.email:jmix-email-starter:${snapshotOr(emailVersion)}"
         api "io.jmix.email:jmix-email-ui-starter:${snapshotOr(emailVersion)}"
+
+        api "io.jmix.emailtemplates:jmix-emailtemplates:${snapshotOr(emailtemplatesVersion)}"
+        api "io.jmix.emailtemplates:jmix-emailtemplates-ui:${snapshotOr(emailtemplatesVersion)}"
+        api "io.jmix.emailtemplates:jmix-emailtemplates-starter:${snapshotOr(emailtemplatesVersion)}"
+        api "io.jmix.emailtemplates:jmix-emailtemplates-ui-starter:${snapshotOr(emailtemplatesVersion)}"
 
         api "io.jmix.grapesjs:jmix-grapesjs:${snapshotOr(grapesJsVersion)}"
         api "io.jmix.grapesjs:jmix-grapesjs-starter:${snapshotOr(grapesJsVersion)}"
@@ -252,6 +258,8 @@ dependencies {
         def yargVersion = '2.2.9'
         api "com.haulmont.yarg:yarg-api:$yargVersion"
         api "com.haulmont.yarg:yarg:$yargVersion"
+
+        api 'org.jsoup:jsoup:1.11.3'
 
         runtime 'org.hsqldb:hsqldb:2.4.1'
     }
